homepage img spacing fix

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -93,7 +93,7 @@
 
   .home-img-row {
     margin-bottom: 15px;
-    gap: 15px;
+    gap: 0px;
     height: 24vh;
   }
 
